--- a/index.html
+++ b/index.html
@@ -103,6 +103,49 @@
       -ms-overflow-style: none;
       scrollbar-width: none;
     }
+
+    /* Splash screen styles */
+    .splash-screen {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: hsl(var(--background));
+      z-index: 9999;
+      transition: opacity 0.2s ease-out;
+    }
+
+    .splash-screen.fade-out {
+      opacity: 0;
+      pointer-events: none;
+    }
+
+    .splash-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 24px;
+    }
+
+    .splash-logo {
+      width: 64px;
+      height: 64px;
+      color: hsl(var(--primary));
+    }
+
+    .splash-spinner {
+      width: 24px;
+      height: 24px;
+      border: 2px solid hsl(var(--muted));
+      border-top-color: hsl(var(--primary));
+      border-radius: 50%;
+      animation: spin 0.8s linear infinite;
+    }
+
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
 	  </style>
     <script>
       (function () {
@@ -133,7 +176,20 @@
 	</head>
 
 <body class="bg-background text-foreground overflow-hidden antialiased h-screen w-screen">
-  <div id="root" class="h-full w-full"></div>
+  <div id="root" class="h-full w-full">
+    <!-- Splash screen: shown while React loads, hidden after first paint -->
+    <div id="splash" class="splash-screen">
+      <div class="splash-content">
+        <svg class="splash-logo" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <rect width="48" height="48" rx="12" fill="currentColor" fill-opacity="0.1"/>
+          <path d="M14 16C14 14.8954 14.8954 14 16 14H32C33.1046 14 34 14.8954 34 16V32C34 33.1046 33.1046 34 32 34H16C14.8954 34 14 33.1046 14 32V16Z" stroke="currentColor" stroke-width="2"/>
+          <path d="M18 22L22 26L18 30" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M26 30H30" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+        <div class="splash-spinner"></div>
+      </div>
+    </div>
+  </div>
   <script type="module" src="/index.tsx"></script>
 </body>
 
